# piness

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  pyproject.toml
.claude/agents/: code-review-expert.md  planner.md  tdd-guide.md
.claude/rules/: incremental-development.md  readme.md  security.md
.claude/skills/: readme.md  tdd-workflow.md
.claude/skills/adr/: SKILL.md
docs/adrs/: ADR001-python-as-implementation-language.md  ADR002-display-driver-abstraction.md  ADR003-fastapi-for-event-ingestion.md  ADR004-rsync-deployment.md  ADR005-in-memory-ring-buffer.md
scripts/: deploy.sh  piness.service
src/piness/: config.py  main.py  store.py
src/piness/api/: routes.py  server.py
src/piness/display/: driver.py  renderer.py
src/piness/display/panels/: graph.py  messages.py  sysinfo.py
tests/: conftest.py  test_config.py  test_renderer.py  test_store.py
tests/test_api/: test_routes.py
tests/test_panels/: test_graph.py  test_messages.py  test_sysinfo.py
